[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Stickman.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Images/player.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Damage/DamageHighNPC.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Damage/DamageVampireHighNPC.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 229.002

[node name="DamageHighNPC" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="DamageNPC" type="Area2D" parent="." index="0" groups=["player_damage"]]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageNPC" index="0"]
position = Vector2( 38, 29 )
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 36.5, 37.5 )

[node name="Sprite" type="Sprite" parent="." index="2"]
position = Vector2( 21, 21 )
texture = ExtResource( 2 )
centered = false

[node name="HP_bar" parent="." index="3"]
margin_left = 12.0
margin_top = -5.0
margin_right = 60.0
margin_bottom = -1.0
max_value = 200.0
value = 200.0

[node name="TimerAttack" type="Timer" parent="." index="4"]

[node name="StandingTimer" type="Timer" parent="." index="5"]

[node name="Timer" type="Timer" parent="." index="6"]

[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
[connection signal="timeout" from="StandingTimer" to="." method="_on_StandingTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
